--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 async-trait = "0.1.89"
+base64 = "0.22.1"
 env_logger = "0.11.8"
+log = "0.4.29"
 reqwest = { version = "0.12.28", features = ["json"] }
 serde = "1.0.228"
 serde_json = "1.0.146"
