--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.146"
 shadowsocks-service = { version = "1.24.0", path = "./crates/shadowsocks-service", features = ["aead-cipher-2022", "server"] }
 tokio = { version = "1.48.0", features = ["signal"] }
 toml = "0.9.10"
+bytes = "1.8.0"
