--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 async-trait = "0.1.89"
+clap = { version = "4.5", features = ["derive"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
 log = "0.4.29"
