--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Release
 
 on:
   push:
-    tags:
-      - "v*"
   workflow_dispatch:
 
 jobs:
@@ -14,18 +12,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
-            archive: tar.gz
             bin: ss22v2b
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            archive: zip
             bin: ss22v2b.exe
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            archive: tar.gz
-            bin: ss22v2b
 
     steps:
       - name: Checkout
@@ -40,39 +32,11 @@ jobs:
       - name: Build (release, no tests)
         run: cargo build --release --locked
 
-      - name: Package (Unix)
-        if: runner.os != 'Windows'
-        shell: bash
-        run: |
-          set -euo pipefail
-          mkdir -p dist
-          NAME="ss22v2b-${{ matrix.target }}-${{ github.ref_name }}"
-          mkdir -p "$NAME"
-          cp target/release/${{ matrix.bin }} "$NAME/"
-          cp README.md "$NAME/" 2>/dev/null || true
-          cp LICENSE "$NAME/" 2>/dev/null || true
-          cp config.example.toml "$NAME/" 2>/dev/null || true
-          tar czf "dist/$NAME.tar.gz" "$NAME"
-
-      - name: Package (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          $ErrorActionPreference = "Stop"
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
-          $name = "ss22v2b-${{ matrix.target }}-${{ github.ref_name }}"
-          New-Item -ItemType Directory -Force -Path $name | Out-Null
-          Copy-Item ".\target\release\${{ matrix.bin }}" "$name\"
-          if (Test-Path .\README.md) { Copy-Item .\README.md "$name\" }
-          if (Test-Path .\LICENSE) { Copy-Item .\LICENSE "$name\" }
-          if (Test-Path .\config.example.toml) { Copy-Item .\config.example.toml "$name\" }
-          Compress-Archive -Path "$name\*" -DestinationPath "dist\$name.zip" -Force
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target }}
-          path: dist/*
+          path: target/release/${{ matrix.bin }}
 
   release:
     name: Publish Release
@@ -80,6 +44,7 @@ jobs:
     needs: build
     permissions:
       contents: write
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
