--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,18 @@ jobs:
           - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             bin: ss22v2b
+          - os: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
+            bin: ss22v2b
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             bin: ss22v2b.exe
+          - os: macos-14
+            target: x86_64-apple-darwin
+            bin: ss22v2b
+          - os: macos-14
+            target: aarch64-apple-darwin
+            bin: ss22v2b
 
     steps:
       - name: Checkout
