--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,18 +15,23 @@ jobs:
           - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             bin: ss22v2b
+            windows: false
           - os: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
             bin: ss22v2b
+            windows: false
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             bin: ss22v2b.exe
+            windows: true
           - os: macos-14
             target: x86_64-apple-darwin
             bin: ss22v2b
+            windows: false
           - os: macos-14
             target: aarch64-apple-darwin
             bin: ss22v2b
+            windows: false
 
     steps:
       - name: Checkout
@@ -41,11 +46,17 @@ jobs:
       - name: Build (release, no tests)
         run: cargo build --release --locked
 
+      - name: Rename binary
+        shell: bash
+        run: |
+          cd target/release
+          mv "${{ matrix.bin }}" "ss22v2b-${{ matrix.target }}${{ matrix.windows && '.exe' || '' }}"
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target }}
-          path: target/release/${{ matrix.bin }}
+          path: target/release/ss22v2b-${{ matrix.target }}${{ matrix.windows && '.exe' || '' }}
 
   release:
     name: Publish Release
