--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,10 @@ clap = { version = "4.5", features = ["derive"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
 log = "0.4.29"
-reqwest = { version = "0.12.28", features = ["json"] }
+reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
 serde = "1.0.228"
 serde_json = "1.0.146"
 shadowsocks-service = { version = "1.24.0", path = "./crates/shadowsocks-service", features = ["aead-cipher-2022", "server"] }
 tokio = { version = "1.48.0", features = ["signal"] }
 toml = "0.9.10"
 bytes = "1.8.0"
-
-# Patch openssl-sys to enable vendored feature for musl targets
-[patch.crates-io]
-openssl-sys = { version = "0.9", features = ["vendored"] }
